@@ -88,6 +88,7 @@ Pierangelo Masarati
 Rafi Einstein
 Ralf Fassel
 Rick Flower
+Richard Kettlewell
 Ron Norman
 Samuel Cote
 Scot Loach
